--- a/index.html
+++ b/index.html
@@ -3,75 +3,93 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Vinyl Collection</title>
+  <title>Vinyl Vault</title>
 
-  <!-- PWA manifest -->
   <link rel="manifest" href="manifest.json">
-
-  <!-- Basic meta for iOS PWA behaviour (optional improvement) -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-title" content="Vinyl Collection">
-
   <link rel="stylesheet" href="style.css">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="Vinyl Vault">
 </head>
 <body>
-  <header>
-    <h1>My Vinyl Collection</h1>
+  <header class="topbar">
+    <div class="brand">
+      <div class="logo">⟲</div>
+      <h1>VINYL VAULT</h1>
+    </div>
+
+    <div class="top-actions">
+      <button id="addViewBtn">Add Vinyl</button>
+      <button id="collectionBtn">Collection</button>
+      <button id="settingsBtn">Other settings</button>
+    </div>
   </header>
 
-  <nav id="topControls">
-    <button id="shelvesBtn">Shelves view</button>
-    <button id="collectionBtn">Full collection</button>
-    <button id="resetDisplaysBtn">Reset display boxes</button>
-  </nav>
+  <main class="layout">
+    <!-- Left: shelves area (desktop) or main stacked area (mobile) -->
+    <section class="shelves-area">
+      <!-- Display boxes (will be above shelves on mobile, right-of-shelves on wide screens via CSS) -->
+      <div id="displayArea" class="displayArea">
+        <div class="displayBox" id="displayBox0">Display Box 1</div>
+        <div class="displayBox" id="displayBox1">Display Box 2</div>
+      </div>
 
-  <!-- Display boxes area (above shelves) -->
-  <section id="displayArea">
-    <div class="displayBox" id="displayBox0">Display Box 1</div>
-    <div class="displayBox" id="displayBox1">Display Box 2</div>
-  </section>
+      <!-- Shelves grid -->
+      <div id="mainContainer" class="shelvesGrid"></div>
+    </section>
 
-  <!-- Shelves / main container -->
-  <main id="mainContainer"></main>
+    <!-- Right column for form / controls on desktop, below on mobile -->
+    <aside class="controls">
+      <div class="control-group">
+        <h3>Add a Vinyl</h3>
+        <label>Artist
+          <input id="artist" type="text" placeholder="Artist">
+        </label>
+        <label>Album
+          <input id="album" type="text" placeholder="Album">
+        </label>
+        <label>Shelf
+          <select id="shelfSelect"></select>
+        </label>
+        <label>Category
+          <select id="categorySelect">
+            <option value="bought">Bought</option>
+            <option value="gran">Gran</option>
+            <option value="nan">Nan</option>
+            <option value="grandad">Grandad</option>
+            <option value="other">Other</option>
+          </select>
+        </label>
+        <div class="control-row">
+          <button id="addBtn">Add</button>
+          <button id="resetDisplaysBtn">Reset displays</button>
+        </div>
+      </div>
 
-  <!-- Add vinyl form -->
-  <aside id="formArea">
-    <h2>Add a new vinyl</h2>
-    <label>
-      Artist
-      <input id="artist" type="text" placeholder="Artist">
-    </label>
-    <label>
-      Album
-      <input id="album" type="text" placeholder="Album">
-    </label>
-    <label>
-      Shelf
-      <select id="shelfSelect"></select>
-    </label>
-    <label>
-      Category
-      <select id="categorySelect">
-        <option value="bought">Bought</option>
-        <option value="gran">Gran</option>
-        <option value="nan">Nan</option>
-        <option value="grandad">Grandad</option>
-        <option value="other">Other</option>
-      </select>
-    </label>
-    <div style="margin-top:8px;">
-      <button id="addBtn">Add Vinyl</button>
-    </div>
-  </aside>
+      <div class="control-group">
+        <h3>View</h3>
+        <button id="shelvesBtn">Shelves view</button>
+        <button id="fullCollectionBtn">Full collection</button>
+      </div>
 
-  <script>
-    // register service worker (PWA)
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js').catch(e => {
-        console.warn('ServiceWorker registration failed:', e);
-      });
-    }
-  </script>
+      <div class="control-group">
+        <h3>Layout</h3>
+        <label>Columns (desktop fallback)
+          <select id="columnsSelect">
+            <option value="2">2</option>
+            <option value="3" selected>3</option>
+            <option value="4">4</option>
+          </select>
+        </label>
+        <p class="muted">Layout auto-adapts by screen size; change columns for wide screens.</p>
+      </div>
+
+      <div class="control-group">
+        <h3>Other settings</h3>
+        <p class="muted">Accounts, themes, and more will go here.</p>
+      </div>
+    </aside>
+  </main>
+
   <script src="script.js"></script>
 </body>
 </html>
