--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
   <meta name="mobile-web-app-title" content="Vinyl Vault">
 </head>
 <body>
+ <!-- Splash screen -->
+  <div id="splash" class="splash">
+    <h1>Vinyl Vault</h1>
+    <p>Loading your collection...</p>
+  </div>
 
+  <!-- Main content -->
+  <main class="layout" style="display:none;">
+    <!-- your existing shelves + controls -->
+  </main>
+
+  <script src="script.js"></script>
   <main class="layout">
     <!-- Left: shelves area (desktop) or main stacked area (mobile) -->
     <section class="shelves-area">
@@ -81,4 +92,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
